fix: text centering and gap between 'Your Cart' and 'Checkout Summary'

--- a/public/style/cart.css
+++ b/public/style/cart.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap; 
   background-color: #7495d7;
-  padding: 20px;
+  padding: 15px;
   max-height: auto;
   justify-content: center; 
   gap: 5px; 
